Main/part91/sintatico.output
State 51 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 $@4: %empty

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes $@4 T_INICIO lista_comandos T_FIM

    6 cabecalho: T_PROGRAMA T_IDENTIF

    7 variaveis: %empty
    8          | declaracao_variaveis

    9 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
   10                     | tipo lista_variaveis

   11 tipo: T_LOGICO
   12     | T_INTEIRO

   13 lista_variaveis: lista_variaveis T_IDENTIF
   14                | T_IDENTIF

   15 funcoes: %empty
   16        | funcao funcoes

   17 $@5: %empty

   18 $@6: %empty

   19 $@7: %empty

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

   21 lista_parametros: %empty
   22                 | parametro lista_parametros

   23 parametro: tipo T_IDENTIF

   24 lista_comandos: %empty
   25               | comando lista_comandos

   26 comando: entrada_saida
   27        | repeticao
   28        | selecao
   29        | atribuicao
   30        | retorne

   31 retorne: T_RETORNE expressao

   32 entrada_saida: leitura
   33              | escrita

   34 leitura: T_LEIA T_IDENTIF

   35 escrita: T_ESCREVA expressao

   36 $@8: %empty

   37 $@9: %empty

   38 repeticao: T_ENQTO $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

   39 $@10: %empty

   40 $@11: %empty

   41 selecao: T_SE expressao T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

   42 $@12: %empty

   43 atribuicao: T_IDENTIF $@12 T_ATRIBUI expressao

   44 expressao: expressao T_VEZES expressao
   45          | expressao T_DIV expressao
   46          | expressao T_MAIS expressao
   47          | expressao T_MENOS expressao
   48          | expressao T_MAIOR expressao
   49          | expressao T_MENOR expressao
   50          | expressao T_IGUAL expressao
   51          | expressao T_E expressao
   52          | expressao T_OU expressao
   53          | termo

   54 identificador: T_IDENTIF

   55 chamada: %empty

   56 $@13: %empty

   57 chamada: T_ABRE $@13 lista_argumentos T_FECHA

   58 lista_argumentos: %empty

   59 $@14: %empty

   60 lista_argumentos: expressao $@14 lista_argumentos

   61 termo: identificador chamada
   62      | T_NUMERO
   63      | T_V
   64      | T_F
   65      | T_NAO termo
   66      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 6
    T_INICIO (259) 5 20
    T_FIM (260) 5
    T_LEIA (261) 34
    T_ESCREVA (262) 35
    T_SE (263) 41
    T_ENTAO (264) 41
    T_SENAO (265) 41
    T_FIMSE (266) 41
    T_FACA (267) 38
    T_ENQTO (268) 38
    T_FIMENQTO (269) 38
    T_INTEIRO (270) 12
    T_LOGICO (271) 11
    T_RETORNE (272) 31
    T_FUNC (273) 20
    T_FIMFUNC (274) 20
    T_MAIS (275) 46
    T_MENOS (276) 47
    T_VEZES (277) 44
    T_DIV (278) 45
    T_ATRIBUI (279) 43
    T_MAIOR (280) 48
    T_MENOR (281) 49
    T_IGUAL (282) 50
    T_E (283) 51
    T_OU (284) 52
    T_NAO (285) 65
    T_ABRE (286) 20 57 66
    T_FECHA (287) 20 57 66
    T_V (288) 63
    T_F (289) 64
    T_IDENTIF (290) 6 13 14 20 23 34 43 54
    T_NUMERO (291) 62


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    programa (38)
        on left: 5
        on right: 0
    $@1 (39)
        on left: 1
        on right: 5
    $@2 (40)
        on left: 2
        on right: 5
    $@3 (41)
        on left: 3
        on right: 5
    $@4 (42)
        on left: 4
        on right: 5
    cabecalho (43)
        on left: 6
        on right: 5
    variaveis (44)
        on left: 7 8
        on right: 5 20
    declaracao_variaveis (45)
        on left: 9 10
        on right: 8 9
    tipo (46)
        on left: 11 12
        on right: 9 10 20 23
    lista_variaveis (47)
        on left: 13 14
        on right: 9 10 13
    funcoes (48)
        on left: 15 16
        on right: 5 16
    funcao (49)
        on left: 20
        on right: 16
    $@5 (50)
        on left: 17
        on right: 20
    $@6 (51)
        on left: 18
        on right: 20
    $@7 (52)
        on left: 19
        on right: 20
    lista_parametros (53)
        on left: 21 22
        on right: 20 22
    parametro (54)
        on left: 23
        on right: 22
    lista_comandos (55)
        on left: 24 25
        on right: 5 20 25 38 41
    comando (56)
        on left: 26 27 28 29 30
        on right: 25
    retorne (57)
        on left: 31
        on right: 30
    entrada_saida (58)
        on left: 32 33
        on right: 26
    leitura (59)
        on left: 34
        on right: 32
    escrita (60)
        on left: 35
        on right: 33
    repeticao (61)
        on left: 38
        on right: 27
    $@8 (62)
        on left: 36
        on right: 38
    $@9 (63)
        on left: 37
        on right: 38
    selecao (64)
        on left: 41
        on right: 28
    $@10 (65)
        on left: 39
        on right: 41
    $@11 (66)
        on left: 40
        on right: 41
    atribuicao (67)
        on left: 43
        on right: 29
    $@12 (68)
        on left: 42
        on right: 43
    expressao (69)
        on left: 44 45 46 47 48 49 50 51 52 53
        on right: 31 35 38 41 43 44 45 46 47 48 49 50 51 52 60 66
    identificador (70)
        on left: 54
        on right: 61
    chamada (71)
        on left: 55 57
        on right: 61
    $@13 (72)
        on left: 56
        on right: 57
    lista_argumentos (73)
        on left: 58 60
        on right: 57 60
    $@14 (74)
        on left: 59
        on right: 60
    termo (75)
        on left: 61 62 63 64 65 66
        on right: 53 65


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    6 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    5 programa: cabecalho . $@1 variaveis $@2 $@3 funcoes $@4 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 6


State 4

    6 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 6 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    5 programa: cabecalho $@1 . variaveis $@2 $@3 funcoes $@4 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 7 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11


State 7

   12 tipo: T_INTEIRO .

    $default  reduce using rule 12 (tipo)


State 8

   11 tipo: T_LOGICO .

    $default  reduce using rule 11 (tipo)


State 9

    5 programa: cabecalho $@1 variaveis . $@2 $@3 funcoes $@4 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 2 ($@2)

    $@2  go to state 12


State 10

    8 variaveis: declaracao_variaveis .

    $default  reduce using rule 8 (variaveis)


State 11

    9 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
   10                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 13

    lista_variaveis  go to state 14


State 12

    5 programa: cabecalho $@1 variaveis $@2 . $@3 funcoes $@4 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 3 ($@3)

    $@3  go to state 15


State 13

   14 lista_variaveis: T_IDENTIF .

    $default  reduce using rule 14 (lista_variaveis)


State 14

    9 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
   10                     | tipo lista_variaveis .
   13 lista_variaveis: lista_variaveis . T_IDENTIF

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8
    T_IDENTIF  shift, and go to state 16

    $default  reduce using rule 10 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 11


State 15

    5 programa: cabecalho $@1 variaveis $@2 $@3 . funcoes $@4 T_INICIO lista_comandos T_FIM

    T_FUNC  shift, and go to state 18

    $default  reduce using rule 15 (funcoes)

    funcoes  go to state 19
    funcao   go to state 20


State 16

   13 lista_variaveis: lista_variaveis T_IDENTIF .

    $default  reduce using rule 13 (lista_variaveis)


State 17

    9 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 9 (declaracao_variaveis)


State 18

   20 funcao: T_FUNC . tipo T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    tipo  go to state 21


State 19

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes . $@4 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 4 ($@4)

    $@4  go to state 22


State 20

   16 funcoes: funcao . funcoes

    T_FUNC  shift, and go to state 18

    $default  reduce using rule 15 (funcoes)

    funcoes  go to state 23
    funcao   go to state 20


State 21

   20 funcao: T_FUNC tipo . T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_IDENTIF  shift, and go to state 24


State 22

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes $@4 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 25


State 23

   16 funcoes: funcao funcoes .

    $default  reduce using rule 16 (funcoes)


State 24

   20 funcao: T_FUNC tipo T_IDENTIF . $@5 T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    $default  reduce using rule 17 ($@5)

    $@5  go to state 26


State 25

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes $@4 T_INICIO . lista_comandos T_FIM

    T_LEIA     shift, and go to state 27
    T_ESCREVA  shift, and go to state 28
    T_SE       shift, and go to state 29
    T_ENQTO    shift, and go to state 30
    T_RETORNE  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32

    $default  reduce using rule 24 (lista_comandos)

    lista_comandos  go to state 33
    comando         go to state 34
    retorne         go to state 35
    entrada_saida   go to state 36
    leitura         go to state 37
    escrita         go to state 38
    repeticao       go to state 39
    selecao         go to state 40
    atribuicao      go to state 41


State 26

   20 funcao: T_FUNC tipo T_IDENTIF $@5 . T_ABRE lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_ABRE  shift, and go to state 42


State 27

   34 leitura: T_LEIA . T_IDENTIF

    T_IDENTIF  shift, and go to state 43


State 28

   35 escrita: T_ESCREVA . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 50
    identificador  go to state 51
    termo          go to state 52


State 29

   41 selecao: T_SE . expressao T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 53
    identificador  go to state 51
    termo          go to state 52


State 30

   38 repeticao: T_ENQTO . $@8 expressao T_FACA $@9 lista_comandos T_FIMENQTO

    $default  reduce using rule 36 ($@8)

    $@8  go to state 54


State 31

   31 retorne: T_RETORNE . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 55
    identificador  go to state 51
    termo          go to state 52


State 32

   43 atribuicao: T_IDENTIF . $@12 T_ATRIBUI expressao

    $default  reduce using rule 42 ($@12)

    $@12  go to state 56


State 33

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes $@4 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 57


State 34

   25 lista_comandos: comando . lista_comandos

    T_LEIA     shift, and go to state 27
    T_ESCREVA  shift, and go to state 28
    T_SE       shift, and go to state 29
    T_ENQTO    shift, and go to state 30
    T_RETORNE  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32

    $default  reduce using rule 24 (lista_comandos)

    lista_comandos  go to state 58
    comando         go to state 34
    retorne         go to state 35
    entrada_saida   go to state 36
    leitura         go to state 37
    escrita         go to state 38
    repeticao       go to state 39
    selecao         go to state 40
    atribuicao      go to state 41


State 35

   30 comando: retorne .

    $default  reduce using rule 30 (comando)


State 36

   26 comando: entrada_saida .

    $default  reduce using rule 26 (comando)


State 37

   32 entrada_saida: leitura .

    $default  reduce using rule 32 (entrada_saida)


State 38

   33 entrada_saida: escrita .

    $default  reduce using rule 33 (entrada_saida)


State 39

   27 comando: repeticao .

    $default  reduce using rule 27 (comando)


State 40

   28 comando: selecao .

    $default  reduce using rule 28 (comando)


State 41

   29 comando: atribuicao .

    $default  reduce using rule 29 (comando)


State 42

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE . lista_parametros T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 21 (lista_parametros)

    tipo              go to state 59
    lista_parametros  go to state 60
    parametro         go to state 61


State 43

   34 leitura: T_LEIA T_IDENTIF .

    $default  reduce using rule 34 (leitura)


State 44

   65 termo: T_NAO . termo

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    identificador  go to state 51
    termo          go to state 62


State 45

   66 termo: T_ABRE . expressao T_FECHA

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 63
    identificador  go to state 51
    termo          go to state 52


State 46

   63 termo: T_V .

    $default  reduce using rule 63 (termo)


State 47

   64 termo: T_F .

    $default  reduce using rule 64 (termo)


State 48

   54 identificador: T_IDENTIF .

    $default  reduce using rule 54 (identificador)


State 49

   62 termo: T_NUMERO .

    $default  reduce using rule 62 (termo)


State 50

   35 escrita: T_ESCREVA expressao .
   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72

    $default  reduce using rule 35 (escrita)


State 51

   61 termo: identificador . chamada

    T_ABRE  shift, and go to state 73

    T_ABRE    [reduce using rule 55 (chamada)]
    $default  reduce using rule 55 (chamada)

    chamada  go to state 74


State 52

   53 expressao: termo .

    $default  reduce using rule 53 (expressao)


State 53

   41 selecao: T_SE expressao . T_ENTAO $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE
   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_ENTAO  shift, and go to state 75
    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72


State 54

   38 repeticao: T_ENQTO $@8 . expressao T_FACA $@9 lista_comandos T_FIMENQTO

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 76
    identificador  go to state 51
    termo          go to state 52


State 55

   31 retorne: T_RETORNE expressao .
   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72

    $default  reduce using rule 31 (retorne)


State 56

   43 atribuicao: T_IDENTIF $@12 . T_ATRIBUI expressao

    T_ATRIBUI  shift, and go to state 77


State 57

    5 programa: cabecalho $@1 variaveis $@2 $@3 funcoes $@4 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 5 (programa)


State 58

   25 lista_comandos: comando lista_comandos .

    $default  reduce using rule 25 (lista_comandos)


State 59

   23 parametro: tipo . T_IDENTIF

    T_IDENTIF  shift, and go to state 78


State 60

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE lista_parametros . T_FECHA $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    T_FECHA  shift, and go to state 79


State 61

   22 lista_parametros: parametro . lista_parametros

    T_INTEIRO  shift, and go to state 7
    T_LOGICO   shift, and go to state 8

    $default  reduce using rule 21 (lista_parametros)

    tipo              go to state 59
    lista_parametros  go to state 80
    parametro         go to state 61


State 62

   65 termo: T_NAO termo .

    $default  reduce using rule 65 (termo)


State 63

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao
   66 termo: T_ABRE expressao . T_FECHA

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72
    T_FECHA  shift, and go to state 81


State 64

   46 expressao: expressao T_MAIS . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 82
    identificador  go to state 51
    termo          go to state 52


State 65

   47 expressao: expressao T_MENOS . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 83
    identificador  go to state 51
    termo          go to state 52


State 66

   44 expressao: expressao T_VEZES . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 84
    identificador  go to state 51
    termo          go to state 52


State 67

   45 expressao: expressao T_DIV . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 85
    identificador  go to state 51
    termo          go to state 52


State 68

   48 expressao: expressao T_MAIOR . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 86
    identificador  go to state 51
    termo          go to state 52


State 69

   49 expressao: expressao T_MENOR . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 87
    identificador  go to state 51
    termo          go to state 52


State 70

   50 expressao: expressao T_IGUAL . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 88
    identificador  go to state 51
    termo          go to state 52


State 71

   51 expressao: expressao T_E . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 89
    identificador  go to state 51
    termo          go to state 52


State 72

   52 expressao: expressao T_OU . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 90
    identificador  go to state 51
    termo          go to state 52


State 73

   57 chamada: T_ABRE . $@13 lista_argumentos T_FECHA

    $default  reduce using rule 56 ($@13)

    $@13  go to state 91


State 74

   61 termo: identificador chamada .

    $default  reduce using rule 61 (termo)


State 75

   41 selecao: T_SE expressao T_ENTAO . $@10 lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

    $default  reduce using rule 39 ($@10)

    $@10  go to state 92


State 76

   38 repeticao: T_ENQTO $@8 expressao . T_FACA $@9 lista_comandos T_FIMENQTO
   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_FACA   shift, and go to state 93
    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70
    T_E      shift, and go to state 71
    T_OU     shift, and go to state 72


State 77

   43 atribuicao: T_IDENTIF $@12 T_ATRIBUI . expressao

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    expressao      go to state 94
    identificador  go to state 51
    termo          go to state 52


State 78

   23 parametro: tipo T_IDENTIF .

    $default  reduce using rule 23 (parametro)


State 79

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE lista_parametros T_FECHA . $@6 variaveis $@7 T_INICIO lista_comandos T_FIMFUNC

    $default  reduce using rule 18 ($@6)

    $@6  go to state 95


State 80

   22 lista_parametros: parametro lista_parametros .

    $default  reduce using rule 22 (lista_parametros)


State 81

   66 termo: T_ABRE expressao T_FECHA .

    $default  reduce using rule 66 (termo)


State 82

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   46          | expressao T_MAIS expressao .
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67

    $default  reduce using rule 46 (expressao)


State 83

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   47          | expressao T_MENOS expressao .
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67

    $default  reduce using rule 47 (expressao)


State 84

   44 expressao: expressao . T_VEZES expressao
   44          | expressao T_VEZES expressao .
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    $default  reduce using rule 44 (expressao)


State 85

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   45          | expressao T_DIV expressao .
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    $default  reduce using rule 45 (expressao)


State 86

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   48          | expressao T_MAIOR expressao .
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67

    $default  reduce using rule 48 (expressao)


State 87

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   49          | expressao T_MENOR expressao .
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67

    $default  reduce using rule 49 (expressao)


State 88

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   50          | expressao T_IGUAL expressao .
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69

    $default  reduce using rule 50 (expressao)


State 89

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   51          | expressao T_E expressao .
   52          | expressao . T_OU expressao

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70

    $default  reduce using rule 51 (expressao)


State 90

   44 expressao: expressao . T_VEZES expressao
   45          | expressao . T_DIV expressao
   46          | expressao . T_MAIS expressao
   47          | expressao . T_MENOS expressao
   48          | expressao . T_MAIOR expressao
   49          | expressao . T_MENOR expressao
   50          | expressao . T_IGUAL expressao
   51          | expressao . T_E expressao
   52          | expressao . T_OU expressao
   52          | expressao T_OU expressao .

    T_MAIS   shift, and go to state 64
    T_MENOS  shift, and go to state 65
    T_VEZES  shift, and go to state 66
    T_DIV    shift, and go to state 67
    T_MAIOR  shift, and go to state 68
    T_MENOR  shift, and go to state 69
    T_IGUAL  shift, and go to state 70

    $default  reduce using rule 52 (expressao)


State 91

   57 chamada: T_ABRE $@13 . lista_argumentos T_FECHA

    T_NAO      shift, and go to state 44
    T_ABRE     shift, and go to state 45
    T_V        shift, and go to state 46
    T_F        shift, and go to state 47
    T_IDENTIF  shift, and go to state 48
    T_NUMERO   shift, and go to state 49

    $default  reduce using rule 58 (lista_argumentos)

    expressao         go to state 96
    identificador     go to state 51
    lista_argumentos  go to state 97
    termo             go to state 52


State 92

   41 selecao: T_SE expressao T_ENTAO $@10 . lista_comandos T_SENAO $@11 lista_comandos T_FIMSE

    T_LEIA     shift, and go to state 27
    T_ESCREVA  shift, and go to state 28
    T_SE       shift, and go to state 29
    T_ENQTO    shift, and go to state 30
    T_RETORNE  shift, and go to state 31
    T_IDENTIF  shift, and go to state 32

    $default  reduce using rule 24 (lista_comandos)
